# MazeGame

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  MazeGame  README.md  cmake_install.cmake  compile_commands.json  requirement.txt  terminal
.cache/clangd/index/: Effects.cpp.07A96F74BB150508.idx  Effects.h.9D580A547E71D05E.idx  Game.cpp.548851DED163DAA3.idx  Game.h.7EA04F8D40D3CEF6.idx  Maze.cpp.0A60A4AF8B6ECDD4.idx  Maze.h.1D5087F89AC33A3B.idx  Player.cpp.273FBC680F859F99.idx  Player.h.1873346DBCC983F6.idx  TextRenderer.cpp.479FAB47947BFF04.idx  TextRenderer.h.EBFC7E08B5670DE6.idx  Utils.cpp.CEA71E3D81459BB2.idx  Utils.h.8A37F0C4CF25D308.idx  main.cpp.DCA1F1609D3EC01F.idx
data/: progress.json
include/: Effects.h  Game.h  Maze.h  Player.h  TextRenderer.h  Utils.h
levels/: level10.txt  level12.txt  level14.txt  level15.txt  level18.txt  level19.txt  level4.txt  level6.txt  level8.txt
src/: Effects.cpp  Game.cpp  Maze.cpp  Player.cpp  TextRenderer.cpp  Utils.cpp  main.cpp
